tests/semantic_errors/files/proj4_man_semanticErr_switch_var_decl.c
int main() {
    int a = 1;
    switch (a) {
        case 1:
            int b = 2;
            break;
    }
    b = 2;
}